--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -2,7 +2,11 @@
 /*--- IMPORT STYLES FOR FASTPAGES ---*/
 @import "minima/fastpages-styles";   
 
-
+// make non-headings slightly lighter
+.post-content p, .post-content li {
+    font-size: 16px; // original size: 20px
+    color: #515151;
+ }
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
