--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,6 +423,8 @@ table th { text-align: center !important; }
 
 pre code { font-size: 15px !important; }
 
+.post-content p, .post-content li { font-size: 16px; color: #515151; }
+
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
 .language-python + .language-plaintext { border-left: 1px solid grey; margin-left: 1rem !important; }
