--- a/_sass/minima/fastpages-styles.scss
+++ b/_sass/minima/fastpages-styles.scss
@@ -53,6 +53,9 @@ h3, h4 {
 p {
     margin-top:1rem !important; 
     margin-bottom:1rem !important;   
+    code {
+      font-size: 100%;
+    }
 }
 
 h1, h2, h3, h4 {
