deploy: c87feb86f063e944c46d91af65daa1c086792785

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -343,6 +343,8 @@ h3, h4 { margin-top: 1.5rem !important; }
 
 p { margin-top: 1rem !important; margin-bottom: 1rem !important; }
 
+p code { font-size: 100%; }
+
 h1, h2, h3, h4 { font-weight: normal !important; margin-bottom: 0.5rem !important; }
 
 h1 code, h2 code, h3 code, h4 code { font-size: 100%; }
