code font-size fix 4

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -3,6 +3,15 @@
 @import "minima/fastpages-styles";   
 
 
+// make non-headings slightly lighter
+.post-content p, .post-content li {
+    font-size: 16px;
+    color: #515151;
+ }
+
+p code{
+    font-size: 16px;
+  }
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
