--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -5,7 +5,7 @@
 
 
 // If you want to turn off dark background for syntax highlighting, comment or delete the below line.
-//@import "minima/fastpages-dracula-highlight"; 
+@import "minima/fastpages-dracula-highlight"; 
 
 
 
@@ -18,9 +18,6 @@
     color: #515151;
  }
 
-p code{
-    font-size: 16px;
-  }
 
 // width of the content area
 // can be set as "px" or "%"
