code cell font-size fix 1

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -8,7 +8,7 @@
 
 // make non-headings slightly lighter
 .post-content p, .post-content li {
-    font-size: 16px;
+    font-size: 18px;
     color: #515151;
  }
 
@@ -16,7 +16,7 @@
 // If you want to turn off dark background for syntax highlighting, comment or delete the below line.
 @import "minima/fastpages-dracula-highlight"; 
 
-p code{
+p pre code{
     font-size: 15px;
   }
   
