--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -425,7 +425,7 @@ pre code { font-size: 15px !important; }
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
-.post-content p, .post-content li { font-size: 16px; color: #515151; }
+.post-content p, .post-content li { font-size: 18px; color: #515151; }
 
 .language-python + .language-plaintext { border-left: 1px solid grey; margin-left: 1rem !important; }
 
@@ -482,6 +482,6 @@ pre code { font-size: 15px !important; }
 
 p code { font-size: 19px; }
 
-p code { font-size: 15px; }
+p pre code { font-size: 15px; }
 
 /*# sourceMappingURL=style.css.map */
