--- a/_sass/minima/fastpages-dracula-highlight.scss
+++ b/_sass/minima/fastpages-dracula-highlight.scss
@@ -56,7 +56,7 @@ $dt-green-light: rgb(172, 229, 145);
 .output_area pre {
     border-left: 1px solid grey;
     margin-left: 1rem !important;
-    font-size: 16px;
+    font-size: 15px; // default 14 px
 }
 
 .code_cell table { width: auto; }
@@ -77,7 +77,7 @@ $dt-green-light: rgb(172, 229, 145);
     pre, code {
      background: $dt-code-cell-background;
      color: $dt-gray-light;
-     font-size: 110%;
+     font-size: 100%; // default 110%
     }
    
     .hll,
@@ -218,5 +218,5 @@ $dt-green-light: rgb(172, 229, 145);
 }
 
 p code{
-  font-size: 19px;
+  font-size: 15px;
 }
