front page fontsize test 2

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -17,6 +17,7 @@
     text-rendering: optimizeLegibility !important;
     //font-family: "Segoe UI", SegoeUI, Roboto, "Segoe WP", "Helvetica Neue", "Helvetica", "Tahoma", "Arial", sans-serif !important;
     font-family: "Georgia", "Times New Roman", serif !important;
+    font-size: 18px
 }
 
 // If you want to turn off dark background for syntax highlighting, comment or delete the below line.
