--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -427,7 +427,7 @@ pre code { font-size: 15px !important; }
 /*----- ADD YOUR STYLES BELOW -------*/
 .post-content p, .post-content li { font-size: 18px; color: #515151; }
 
-.page-content { -webkit-font-smoothing: antialiased !important; text-rendering: optimizeLegibility !important; font-family: "Georgia", "Times New Roman", serif !important; }
+.page-content { -webkit-font-smoothing: antialiased !important; text-rendering: optimizeLegibility !important; font-family: "Georgia", "Times New Roman", serif !important; font-size: 18px; }
 
 .language-python + .language-plaintext { border-left: 1px solid grey; margin-left: 1rem !important; }
 
