big update of main page and publications

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -25,5 +25,15 @@
 
 p code{
     font-size: 15px;
-  }
-  
+}
+
+.page-link {
+    font-size: 130%;
+}
+
+.image-preview {
+    width: 70%;
+}
+.post-link, .post-meta-description, .post-meta {
+    margin-left: -75px;
+}
