--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -486,4 +486,10 @@ p code { font-size: 18px; }
 
 p code { font-size: 15px; }
 
+.page-link { font-size: 130%; }
+
+.image-preview { width: 70%; }
+
+.post-link, .post-meta-description, .post-meta { margin-left: -75px; }
+
 /*# sourceMappingURL=style.css.map */
